--- a/procedimento3/usuarios.html
+++ b/procedimento3/usuarios.html
@@ -15,7 +15,7 @@
 	</head>
 	<body class="container bg-warning">
 		<h1>Usuários de Teste via REST</h1>
-		<div class="alert alert-warning">Os usuários deste exemplo são fornecidos pela API de testes reqres.in</div>
+		<h6 style="font-style: italic">Os usuários deste exemplo são fornecidos pela API de testes reqres.in</h6>
 		<div id="usuarios" name="usuarios" class="container-fluid">
 			<div class="row">
 				<div class="card col-sm-3 p-2 m-3" v-for="(user,index) in users" :key="index">
